--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url("Image/IMG_20240319_135516.jpg");
+    background-image: url("IMG_20240319_135516.jpg");
     background-size: 370px 370px;
     background-repeat: no-repeat;
     background-color: #548687;
